overflow issue

--- a/public/sass/modules/_general.scss
+++ b/public/sass/modules/_general.scss
@@ -57,11 +57,15 @@ table {
 }
 /* end of css reset */
 
+html{
+    overflow: auto;
+}
+
+
 html, body {
     color: $teal;
     background-color: $beige;
     height: 100%;
-    overflow: auto;
     font-size: 16px;
 
 }
